--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,11 @@
-{ "rewrites": [{ "source": "/pages", "destination": "/pages" }] }
+{
+    "builds": [
+      { "src": "package.json", "use": "@vercel/static-build" }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/src/testpage.tsx" }
+    ],
+    "env": {
+      "MY_ENV_VARIABLE": "my-env-value"
+    }
+  }
